confluent-schema-registry/1.2/modules/ROOT/pages/confluent-schema-registry-connector-studio.adoc
= Using Anypoint Studio to Configure Confluent Schema Registry Connector 1.2
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]

Anypoint Studio (Studio) editors help you design and update your Mule applications, properties, and configuration files.

To add and configure a connector in Studio:

. <<create-mule-project,Create a Mule project>>.
. <<add-connector-to-project,Add the connector to your Mule project>>.
. <<configure-source,Configure a source for the connector's flow>>.
. <<add-connector-operation,Add a connector operation to the flow>>.
. <<configure-global-element,Configure a global element for the connector>>.
. <<configure-other-fields,Configure the other connector fields>>.

When you run the connector, you can view the app log to check for problems in real time, as described in <<view-app-log,View the App Log>>.

If you are new to configuring connectors in Studio, see xref:connectors::introduction/intro-config-use-studio.adoc[Using Anypoint Studio to Configure a Connector]. If, after reading this topic, you need additional information about the connector fields, see the xref:confluent-schema-registry-connector-reference.adoc[Confluent Schema Registry Reference].

[[create-mule-project]]
== Create a Mule Project

In Studio, create a new Mule project in which to add and configure the connector:

. In Studio, select *File > New > Mule Project*.
. Enter a name for your Mule project and click *Finish*.

[[add-connector-to-project]]
== Add the Connector to Your Mule Project

Add Confluent Schema Registry Connector to your Mule project to automatically populate the XML code with the connector's namespace and schema location and add the required dependencies to the project's `pom.xml` file:

. In the *Mule Palette* view, click *(X) Search in Exchange*.
. In the *Add Dependencies to Project* window, type `confluent schema registry` in the search field.
. Click *Confluent Schema Registry* in *Available modules*.
. Click *Add*.
. Click *Finish*.

Adding a connector to a Mule project in Studio does not make that connector available to other projects in your Studio workspace.

[[configure-source]]
== Configure a Source

A source initiates a flow when a specified condition is met.

You can configure one of these sources to use with Confluent Schema Registry Connector:

* HTTP Listener +
Initiates a flow each time it receives a request on the configured host and port
* Scheduler +
Initiates a flow when a time-based condition is met

For example, to configure an HTTP Listener source, follow these steps:

. In the *Mule Palette* view, select *HTTP > Listener*.
. Drag *Listener* to the Studio canvas.
. On the *Listener* configuration screen, optionally change the value of the *Display Name* field.
. Specify a value for the *Path* field.
. Click the plus sign (*+*) next to the *Connector configuration* field to configure a global element that can be used by all instances of the HTTP Listener source in the app.
. On the *General* tab, specify connection information for the connector.
. On the *TLS* tab, optionally specify the TLS information for the connector.
. On the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.

[[add-connector-operation]]
== Add a Connector Operation to the Flow

When you add a connector operation to your flow, you are specifying an action for that connector to perform.

To add an operation for Confluent Schema Registry Connector, follow these steps:

. In the *Mule Palette* view, select *Confluent Schema Registry* and then select the desired operation.
. Drag the operation onto the Studio canvas to the right of the input source.

[[configure-global-element]]
== Configure a Global Element for the Connector

When you configure a connector, configure a global element that all instances of that connector in the app can use. Configuring a global element requires you to provide the authentication credentials that the connector requires to access the target Confluent Schema Registry system. Confluent Schema Registry Connector supports Basic Auth and Unsecured.
To configure the global element for Confluent Schema Registry Connector, follow these steps:

. Select the operation in the Studio canvas.
. In the configuration screen for the operation, click the plus sign (*+*) next to the *Connector configuration* field to access the global element configuration fields.
. On the *General* tab, in *Connection*, select the authentication method to configure:

* <<basic_auth>>
* <<unsecured>>

+
You can reference a configuration file that contains ANT-style property placeholders (recommended), or you can enter your authorization credentials in the global configuration properties. For information about the benefits of using property placeholders and how to configure them, see xref:connectors::introduction/intro-connector-configuration-overview.adoc[Anypoint Connector Configuration].

. On the *Advanced* tab, optionally configure *Avro Schema Parse Cache* and specify reconnection information, including a reconnection strategy.
+
The *Avro Schema Parse Cache* settings affect only Avro-related operations. To enable this cache, set *Maximum size* to the maximum number of parsed schemas to retain. To remove unused schemas after an idle period, set *Time to live* and *Time to live time unit*. A *Time to live* value greater than `0` requires a *Maximum size* value greater than `0`.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.

[[basic_auth]]
=== Basic Auth

Enter the following information on the *General* tab of the *Global Element Properties* screen to configure Basic auth:

[%header,cols="30s,70a"]
|===
|Field |User Action
|Name |Enter the configuration name.
|Connection | Select *Basic*.
|===

[[unsecured]]
=== Unsecured

Enter the following information on the *General* tab of the global element configuration screen to configure Unsecured authentication:

[%header,cols="30s,70a"]
|===
|Field |User Action
|Name |Enter the configuration name.
|Connection | Select *Unsecured*.
|===

[[configure-other-fields]]
== Configure Additional Connector Fields

After you configure a global element for Confluent Schema Registry, configure the other required fields for the connector. The required fields vary depending on which connector operation you use.

[[view-app-log]]
== View the App Log

To check for problems, you can view the app log as follows:

* If you’re running the app from Anypoint Platform, the app log output is visible in the Anypoint Studio console window.
* If you’re running the app using Mule from the command line, the app log output is visible in your OS console.

Unless the log file path is customized in the app’s log file (`log4j2.xml`), you can also view the app log in the default location `MULE_HOME/logs/<app-name>.log`. You can configure the location of the log path in the app log file `log4j2.xml`.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:connectors::introduction/intro-config-use-studio.adoc[Using Anypoint Studio to Configure a Connector]
* xref:confluent-schema-registry-connector-reference.adoc[Confluent Schema Registry Connector Reference]
* https://help.salesforce.com[Salesforce Help]
